changes in animations etc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container>
   <mat-sidenav [opened]="navigation.isOpened()" (closed)="navigation.toggleNav(false)">
-    <app-nav-container></app-nav-container>
+    <app-sidebar-container></app-sidebar-container>
   </mat-sidenav>
   <mat-sidenav-content>
     <app-content-container></app-content-container>
