--- a/src/app/content/toolbar/toolbar.component.html
+++ b/src/app/content/toolbar/toolbar.component.html
@@ -1,13 +1,8 @@
 <mat-toolbar color="primary">
-    <button (click)="toggleNavigation()" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-    </button>
+    <app-globalbutton (click)="toggleNavigation()" [icon]="'menu'" [type]="'icon'"></app-globalbutton>
     <app-toolbar-buttons></app-toolbar-buttons>
     <span class="spacer"></span>
     <div class="share-section">
-        <span class="desc" [ngClass]="{'hidden': shareHover}">Share your score</span>
-        <button (mouseleave)="toggleHelp(true)" (mouseenter)="toggleHelp(false)" mat-icon-button aria-label="Share your score">
-            <mat-icon>share</mat-icon>
-        </button>
+        <app-globalbutton [type]="'icon'" [icon]="'share'" [tooltip]="{ message: 'Share your scores', position: 'left' }"></app-globalbutton>
     </div>
 </mat-toolbar>
