--- a/src/app/content/toolbar/toolbar.component.scss
+++ b/src/app/content/toolbar/toolbar.component.scss
@@ -1,3 +1,8 @@
+:host {
+    box-shadow: 0 0 30px rgba(0,0,0,0.3);
+    z-index: 1;
+}
+
 .spacer {
     flex: 1 1 auto;
 }
@@ -16,9 +21,5 @@
         margin: auto;
         opacity: 1;
         font-size: .8rem;
-
-        &.hidden {
-            opacity: 0;
-        }
     }
 }
