--- a/src/app/game/quote/quote.component.html
+++ b/src/app/game/quote/quote.component.html
@@ -1,3 +1,8 @@
 <div class="quote-element">
-    <p>{{ currentQuote }}</p>
+    <p class="quote-text">
+        {{ currentQuote }}
+        <span class="author">
+            {{ author }}
+        </span>
+    </p>
 </div>
