--- a/src/app/game/game-container/game-container.component.html
+++ b/src/app/game/game-container/game-container.component.html
@@ -2,4 +2,7 @@
     <app-quote-section></app-quote-section>
 </div>
 <div class="game-cards" [@routeAnimations]="getRouteAnimationData()">
+    <section class="cards">
+        <app-cards-container></app-cards-container>
+    </section>
 </div>
