--- a/src/app/sidebar/sidebar-container/sidebar-container.component.html
+++ b/src/app/sidebar/sidebar-container/sidebar-container.component.html
@@ -1,35 +1,11 @@
 <div class="header">
-    <h3 class="desc">Leaderboard</h3>
-    <button (click)="navigation.toggleNav(false)" mat-icon-button aria-label="Close navigation button">
-        <mat-icon>close</mat-icon>
-    </button>
+  <h3 class="desc">Your saved scores</h3>
+  <button (click)="navigation.toggleNav(false)" mat-icon-button aria-label="Close navigation button">
+    <mat-icon>close</mat-icon>
+  </button>
 </div>
 <mat-list>
-    <mat-list-item>
-        <div mat-card-avatar class="header__image"></div>
-        <h3 matLine> dad </h3>
-        <p matLine>
-          <span> something sel </span>
-          <span class="demo-2"> -- idonno </span>
-        </p>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>
-        <div mat-card-avatar class="header__image"></div>
-        <h3 matLine> dad </h3>
-        <p matLine>
-          <span> something sel </span>
-          <span class="demo-2"> -- idonno </span>
-        </p>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>
-        <div mat-card-avatar class="header__image"></div>
-        <h3 matLine> dad </h3>
-        <p matLine>
-          <span> something sel </span>
-          <span class="demo-2"> -- idonno </span>
-        </p>
-    </mat-list-item>
-    <mat-divider></mat-divider>
+  <ng-template ngFor let-item [ngForOf]="scoreboard.getScoreboards()">
+    <app-saved-score-item [item]="item"></app-saved-score-item>
+  </ng-template>
 </mat-list>
